--- a/package.json
+++ b/package.json
@@ -7,12 +7,15 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "format": "prettier --write '**/*.{js,css,json,md}'",
-    "dev": "wrangler dev",
-    "deploy": "wrangler deploy"
+    "deploy": "wrangler deploy src/",
+    "dev": "wrangler dev"
   },
   "author": "julianostroschon <julianostroschon@gmail.com>",
   "license": "MIT",
   "devDependencies": {
-    "prettier": "^1.18.2"
+    "prettier": "^1.18.2",
+    "@cloudflare/workers-types": "^4.20231016.0",
+    "typescript": "^5.0.4",
+    "wrangler": "^3.0.0"
   }
 }
