--- a/package.json
+++ b/package.json
@@ -3,12 +3,12 @@
 	"name": "saturday",
 	"version": "1.0.0",
 	"description": "A template for kick starting a Cloudflare Workers project",
-	"main": "index.js",
+	"main": "src/index.ts",
 	"scripts": {
 		"build": "tsc",
 		"format": "prettier --write '**/*.{js,css,json,md}'",
-		"deploy": "wrangler deploy src/index.ts",
-		"dev": "wrangler dev src/index.ts",
+		"deploy": "wrangler deploy ./src/index.ts",
+		"dev": "wrangler dev ./src/index.ts",
 		"test": "vitest run"
 	},
 	"author": "julianostroschon <julianostroschon@gmail.com>",
@@ -17,7 +17,10 @@
 		"@cloudflare/workers-types": "^4.20231016.0",
 		"prettier": "^1.18.2",
 		"typescript": "^5.0.4",
-		"wrangler": "^3.0.0",
-		"vitest": "^1.5.0"
+		"vitest": "^1.5.0",
+		"wrangler": "3.17.0"
+	},
+	"dependencies": {
+		"@tsndr/cloudflare-worker-jwt": "^2.5.3"
 	}
 }
